
cc_library(
  name = "board",
  hdrs = ["src/board.h"],
  srcs = ["src/board.cc"],
  deps = [
    ":group",
    ":cell",
  ],
)

cc_library(
  name = "group",
  hdrs = ["src/group.h"],
  srcs = ["src/group.cc"],
  deps = [
    ":cell",
  ],
)

cc_library(
  name = "cell",
  hdrs = ["src/cell.h"],
  srcs = ["src/cell.cc"],
  deps = [
  ],
  visibility = ["//src/test:__pkg__"],
)
