
cc_library(
  name = "board",
  hdrs = ["src/board.h"],
  srcs = ["src/board.cpp"],
  deps = [
    ":group",
    ":cell",
  ],
)

cc_library(
  name = "group",
  hdrs = ["src/group.h"],
  srcs = ["src/group.cpp"],
  deps = [
    ":cell",
  ],
  visibility = ["//src/test:__pkg__"],
)

cc_library(
  name = "cell",
  hdrs = ["src/cell.h"],
  srcs = ["src/cell.cpp"],
  deps = [
  ],
  visibility = ["//src/test:__pkg__"],
)
