
cc_test(
  name = "cell-test",
  srcs = ["cell_test.cpp"],
  deps = [
    "//:cell",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ],
)

cc_test(
  name = "group-test",
  srcs = ["group_test.cpp"],
  deps = [
    "//:group",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
  ],
)
